--- a/ITMO.ASP/ITMO.ASP.Lab4/Site.Master
+++ b/ITMO.ASP/ITMO.ASP.Lab4/Site.Master
@@ -1,4 +1,4 @@
-﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="ITMO.ASP2023.Task01.Site" %>
+﻿<%@ Master Language="C#" AutoEventWireup="true" CodeBehind="Site.master.cs" Inherits="ITMO.ASP.Task01.Site" %>
 
 <!DOCTYPE html>
 
